--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
+            <img src="./cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
             <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
                 encontrado.</p>
         </div>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="passo" id="passo-11">
-            <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
+            <img src="./cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
             <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
